--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,28 @@
 {
     "name": "hame/hexlet",
     "autoload": {
-        "psr-4": {
-            "Hame\\Hexlet\\": "src/"
-        }
+      "psr-4": {
+        "Hame\\Hexlet\\": "src/",
+        "Hexlet\\Php\\": "src/" 
+      }
     },
+
+    "scripts": {
+      "phpcs": "phpcs"
+    },
+    
+
     "authors": [
-        {
-            "name": "hex",
-            "email": "hexlet@ry.io"
-        }
+      {
+        "name": "hex",
+        "email": "hexlet@ry.io"
+      }
     ],
-    "require": {}
-}
+    "require": {
+      "illuminate/collections": "^10.48"
+    },
+    "require-dev": {
+      "phpunit/phpunit": "^10.5",
+        "squizlabs/php_codesniffer": "^3.10"
+    }
+  }
